--- a/static/style.css
+++ b/static/style.css
@@ -86,7 +86,8 @@ body {
   align-items: center;
   justify-content: center;
   /* The image used */
-  background-image: url(images/textilebg.jpg);
+  /* background-image: url(images/textilebg.jpg); */
+  background-color: #2c3e50;
   /* Full height */
   height: 100%; 
   /* Create the parallax scrolling effect */
@@ -96,7 +97,7 @@ body {
   background-size: cover;
   row-gap: 2rem;
   text-align: center;
-  color: #fff;
+  color: #ff5722;
 }
 
 .servicesection {
@@ -108,8 +109,8 @@ body {
   align-items: center;
   justify-content: center;
   /* The image used */
-  background-image: url(images/blurbgimg.jpg);
-  /* background-color:  #1b4f72 ; */
+  /* background-image: url(images/textilebg.jpg); */
+  background-color: #fff;
   /* Full height */
   height: 100%; 
   /* Create the parallax scrolling effect */
@@ -119,6 +120,53 @@ body {
   background-size: cover;
   row-gap: 2rem;
   text-align: center;
+  color: #2c3e50;
+}
+
+.productsection {
+  /* scroll-snap-align: start;
+  scroll-snap-stop: always; */
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* The image used */
+  /* background-image: url(images/textilebg.jpg); */
+  background-color: #ff5722;
+  /* Full height */
+  height: 100%; 
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  row-gap: 2rem;
+  text-align: center;
+  color: #2c3e50;
+}
+
+.careersection {
+  /* scroll-snap-align: start;
+  scroll-snap-stop: always; */
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* The image used */
+  /* background-image: url(images/textilebg.jpg); */
+  background-color: #fff;
+  /* Full height */
+  height: 100%; 
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  row-gap: 2rem;
+  text-align: center;
+  color: #ff5722;
 }
 
 .faqsection {
